--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
 </head>
 
 <body>
-    
+    <div class="header">
+    </div>
+
+    <div class="hero">
+    </div>
+
+    <div class="cards">
+    </div>
+
+    <div class="quote">
+    </div>
+
+    <div class="cta">
+    </div>
+
+    <div class="footer">
+    </div>
 </body>
 
 </html>
