Add content to index.html

--- a/index.html
+++ b/index.html
@@ -10,21 +10,46 @@
 
 <body>
     <div class="header">
+        <div class="logo"></div>
+        <div class="links"></div>
     </div>
 
     <div class="hero">
+        <div class="text">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is
+                lower contrast</p>
+            <button>Sign up</button>
+        </div>
+        <img src="" alt="">
     </div>
 
-    <div class="cards">
+    <div class="card-row">
+        <h2>Some random information</h2>
+        <div class="card-deck">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
     </div>
 
     <div class="quote">
+        <h3> This is an inspiring quotem or a testimonial from a customer. Maybe it's just filling up space , or maybe
+            people will actually read it. Who knows? All I know is that it looks nice.</h3>
+        <h5>-Thor, God of Thunder</h5>
     </div>
 
     <div class="cta">
+        <div class="left-cta">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
     </div>
 
     <div class="footer">
+        <p>Copyright © The Odin Project 2022</p>
     </div>
 </body>
 
