add image to index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 lower contrast</p>
             <button>Sign up</button>
         </div>
-        <img src="" alt="">
+        <img src="https://scontent.fdel1-4.fna.fbcdn.net/v/t1.6435-9/180978949_314228950059549_1005358403722529104_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=cXfm9tkg13gAX8j9nHD&_nc_ht=scontent.fdel1-4.fna&oh=00_AT9A_0UtVlMqJZUBalXFwRKrVWNMp8K0HeWy2wKuBY418Q&oe=636DA10E" alt="">
     </div>
 
     <div class="card-row">
