Add images and cards to index.html

--- a/index.html
+++ b/index.html
@@ -21,16 +21,33 @@
                 lower contrast</p>
             <button>Sign up</button>
         </div>
-        <img src="https://scontent.fdel1-4.fna.fbcdn.net/v/t1.6435-9/180978949_314228950059549_1005358403722529104_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=cXfm9tkg13gAX8j9nHD&_nc_ht=scontent.fdel1-4.fna&oh=00_AT9A_0UtVlMqJZUBalXFwRKrVWNMp8K0HeWy2wKuBY418Q&oe=636DA10E" alt="">
+        <img src="https://scontent.fdel1-4.fna.fbcdn.net/v/t1.6435-9/180978949_314228950059549_1005358403722529104_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=cXfm9tkg13gAX8j9nHD&_nc_ht=scontent.fdel1-4.fna&oh=00_AT9A_0UtVlMqJZUBalXFwRKrVWNMp8K0HeWy2wKuBY418Q&oe=636DA10E"
+            alt="">
     </div>
 
     <div class="card-row">
         <h2>Some random information</h2>
         <div class="card-deck">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1493612276216-ee3925520721?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928&q=80"
+                    alt="">
+                <p>this is a subtext under an image</p>
+            </div>
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1493612276216-ee3925520721?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928&q=80"
+                    alt="">
+                <p>this is a subtext under an image</p>
+            </div>
+            <div class="card"><img
+                    src="https://images.unsplash.com/photo-1493612276216-ee3925520721?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928&q=80"
+                    alt="">
+                <p>this is a subtext under an image</p>
+            </div>
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1493612276216-ee3925520721?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928&q=80"
+                    alt="">
+                <p>this is a subtext under an image</p>
+            </div>
         </div>
     </div>
 
