--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 
 <body>
     <div class="header">
-        <div class="logo"></div>
-        <div class="links"></div>
+        <div class="logo"> Header Logo</div>
+        <div class="links">
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
     </div>
 
     <div class="hero">
