add header and content to index and styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <div class="header">
-        <div class="logo"> Header Logo</div>
+        <div class="logo">
+            <h1>Header Logo</h1>
+        </div>
         <div class="links">
             <ul>
                 <li><a href="#">header link one</a></li>
